src/components/DiscoveryCard.module.scss
.movieCard {
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    width: clamp(280px, 30vw, 300px);
    position: relative;
    box-shadow: 0 1px 35px var(--text-color);
}

.poster {
    aspect-ratio: 2 / 3;
    border-radius: 8px;
}

.movieCardText {
    background: var(--complement);
    line-break: loose;
    border-radius: 0 0 8px 8px;
    padding: 8px 8px;

    transition: height 0.2s ease-in-out;
    height: 40px;
    overflow: auto;
    scroll-snap-align: start;
    position: absolute;
    bottom: 0;
}

.movieCardText:hover {
    height: 60%;
    overflow: auto;
}

.movieCardText > div:not(.englishTitle) {
    padding: 4px 8px;
}

.country {
    text-decoration: underline;
    padding: 4px 8px;
}

@media (max-width: 768px) {
    .englishTitle {
        width: min-content;
    }

    .movieCardText {
        font-size: smaller;
        padding: 4px 0;
    }
}

